# ttsdb

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml  requirements.txt  test.py
archive/: .env.example  .gitignore  README.md  docker-compose.yml  generate_data.py  pyproject.toml  requirements.txt  run.sh  tts_api.py
archive/configs/: bark_small.yaml  fishspeech_1_0_large.yaml  fishspeech_1_2.yaml  fishspeech_1_4.yaml  gptsovits_1.yaml  gptsovits_2.yaml  hierspeechpp_1.yaml  maskgct.yaml  openvoice_2.yaml  parlertts_large_1_0.yaml  parlertts_mini_expresso.yaml  parlertts_mini_multilingual_1_0.yaml  parlertts_mini_multilingual_1_1.yaml  pheme.yaml  styletts2.yaml  tortoise.yaml  valle_small.yaml  vevo.yaml  whisperspeech_base.yaml  whisperspeech_medium.yaml  whisperspeech_tiny.yaml  xtts_1.yaml  xtts_2.yaml
archive/containers/amphion/: Dockerfile  amphion_service.py  download_encodec_nltk.py  requirements.txt
archive/containers/bark/: Dockerfile  bark_service.py  load_models.py  requirements.txt
archive/containers/f5e2/: Dockerfile  f5e2_service.py  load_models.py
archive/containers/fishaudio/: Dockerfile  fish_service.py
archive/containers/gpt-sovits/: Dockerfile  gptsovits_service.py
archive/containers/hierspeechpp/: Dockerfile  hierspeechpp_service.py
archive/containers/metavoice/: Dockerfile  load_models.py  metavoice_service.py
archive/containers/openvoice/: Dockerfile  load_models.py  openvoice_service.py
archive/containers/parlertts/: Dockerfile  load_models.py  parlertts_descriptions.py  parlertts_service.py
archive/containers/pheme/: Dockerfile  pheme_service.py
archive/containers/speecht5/: Dockerfile  load_models.py  speecht5_service.py
archive/containers/styletts2/: Dockerfile  requirements.txt  styletts2_service.py
archive/containers/tortoise/: Dockerfile  load_models.py  requirements.txt  tortoise_service.py
archive/containers/voicecraft/: Dockerfile  load_models.py  voicecraft_service.py
archive/containers/whisperspeech/: Dockerfile  load_models.py  whisperspeech_service.py
archive/containers/xtts/: Dockerfile  load_models.py  xtts_service.py
archive/src/ttsds_systems/: __init__.py
archive/src/ttsds_systems/providers/: amphion_provider.yml  f5_provider.yml  fishaudio_provider.yml  gptsovits_provider.yml  sunoai_provider.yml
assets/: test_data.yaml  (+1 more)
core/: README.md  pyproject.toml
core/src/ttsdb_core/: __init__.py  config.py  dataset_worker.py  vendor.py  weights.py
core/src/ttsdb_core/testing/: __init__.py  fixtures.py  pytest_helpers.py  testkit.py
core/tests/: conftest.py  test_config.py
models/e2-tts/: README.md  config.yaml  integration_result.json  pyproject.toml  test_data.yaml
models/e2-tts/scripts/: prepare_weights.py
models/e2-tts/src/ttsdb_e2_tts/: __init__.py
models/e2-tts/tests/: test_model.py
models/f5-tts/: .gitignore  DEPENDENCIES_AND_ISSUES.md  README.md  config.yaml  integration_result.json  pyproject.toml
models/f5-tts/scripts/: prepare_weights.py
models/f5-tts/tests/: conftest.py  test_model.py
models/fish-speech/: README.md  config.yaml  integration_result.json  pyproject.toml
models/fish-speech/scripts/: patch_vendor.py  prepare_weights.py
models/fish-speech/tests/: conftest.py  test_model.py
models/gpt-sovits/: .gitignore  README.md  config.yaml  integration_result.json  pyproject.toml
models/gpt-sovits/scripts/: patch_vendor.py  prepare_weights.py
models/gpt-sovits/tests/: conftest.py  test_model.py
models/hierspeech/: README.md  config.yaml  integration_result.json  pyproject.toml
models/hierspeech/scripts/: prepare_weights.py
models/hierspeech/tests/: test_model.py
models/indextts/: README.md  config.yaml  integration_result.json  pyproject.toml
models/indextts/scripts/: patch_vendor.py  prepare_weights.py
models/indextts/tests/: test_model.py
models/maskgct/: .gitignore  DEPENDENCIES_AND_ISSUES.md  README.md  config.yaml  info.yaml  integration_result.json  pyproject.toml  test_data.yaml
models/maskgct/replicate/: cog.yaml  predict.py  requirements.txt
models/maskgct/scripts/: patch_vendor.py  prepare_weights.py
models/maskgct/tests/: conftest.py  test_model.py
models/metavoice/: .gitignore  README.md  config.yaml  integration_result.json  pyproject.toml
models/metavoice/scripts/: prepare_weights.py
models/metavoice/tests/: test_model.py
models/openvoice/: README.md  config.yaml  integration_result.json  pyproject.toml
models/openvoice/scripts/: patch_vendor.py  prepare_weights.py
models/openvoice/tests/: test_model.py
models/pheme/: .gitignore  README.md  config.yaml  integration_result.json  pyproject.toml
models/pheme/scripts/: prepare_weights.py
models/pheme/tests/: conftest.py  test_model.py
models/styletts2/: README.md  config.yaml  integration_result.json  pyproject.toml
models/styletts2/scripts/: prepare_weights.py
models/styletts2/tests/: test_model.py
models/tortoise/: .gitignore  README.md  config.yaml  integration_result.json  pyproject.toml  test_data.yaml
models/tortoise/scripts/: patch_vendor.py  prepare_weights.py
models/tortoise/tests/: conftest.py  test_model.py
models/vevo/: README.md  config.yaml  integration_result.json  pyproject.toml
models/vevo/scripts/: prepare_weights.py
models/vevo/tests/: test_model.py
models/vibevoice/: .gitignore  README.md  config.yaml  integration_result.json  pyproject.toml
models/vibevoice/scripts/: prepare_weights.py
models/vibevoice/tests/: conftest.py  test_model.py
models/voicecraft/: README.md  config.yaml  integration_result.json  pyproject.toml
models/voicecraft/scripts/: patch_vendor.py  prepare_weights.py
models/voicecraft/tests/: test_model.py
models/whisperspeech/: README.md  config.yaml  integration_result.json  pyproject.toml
models/whisperspeech/scripts/: prepare_weights.py
models/whisperspeech/tests/: conftest.py  test_model.py
models/xtts/: README.md  config.yaml  integration_result.json  pyproject.toml
models/xtts/scripts/: prepare_weights.py
models/xtts/tests/: test_model.py
(+143 files in other folders)
