[project]
name = "ttsdb"
version = "0.1.0"
description = "TTSDB monorepo tooling"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
# For publishing to HuggingFace/PyPI
publish = [
  "huggingface_hub>=0.20",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["**/_vendor/**"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = [
  "E501", # line length handled by formatter/line-length
  "B027", # we use an empty abstract __exit__ method to not force implementing it
  "UP036", # we use differing python versions for different models
  "B008", # we use Input from cog for replicate/cog
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/tests/**" = ["B018"]


[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "core",
  "models",
]
markers = [
  "integration: integration tests that require model weights and/or network",
]
