[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttsds-systems"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "docker>=5.0.0",
  "pyyaml>=5.4.1",
]

[project.urls]
Documentation = "https://github.com/Christoph Minixhofer/ttsds_systems#readme"
Issues = "https://github.com/Christoph Minixhofer/ttsds_systems/issues"
Source = "https://github.com/Christoph Minixhofer/ttsds_systems"

[tool.hatch.version]
path = "src/ttsds_systems/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ttsds_systems tests}"

[tool.coverage.run]
source_pkgs = ["ttsds_systems", "tests"]
branch = true
parallel = true
omit = [
  "src/ttsds_systems/__about__.py",
]

[tool.coverage.paths]
ttsds_systems = ["src/ttsds_systems", "*/ttsds_systems/src/ttsds_systems"]
tests = ["tests", "*/ttsds_systems/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
