[project]
name = "ttsdb_f5_tts"
version = "0.1.0"
description = "F5-TTS model for TTSDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ttsdb-core>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttsdb_f5_tts"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "ttsdb_f5_tts/config.yaml"
