# Generated at 2026-02-02T10:50:14Z from templates/init/pyproject.toml.j2

[project]
name = "ttsdb_hierspeech"
version = "0.1.0"
description = "HierSpeech model for TTSDB"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ttsdb-core>=0.1.4",
    "torch==1.13.1",
    "torchaudio==0.13.1",
    "numpy==1.26.1",
    "scipy==1.11.3",
    "einops==0.7.0",
    "phonemizer==3.2.1",
    "timm==0.6.13",
    "transformers==4.34.0",
    "Unidecode==1.3.7",
    "tqdm==4.65.0",
    "gdown>=5.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttsdb_hierspeech"]
include = [
    # Include vendored upstream research code in wheels
    "src/ttsdb_hierspeech/_vendor/**",
]
exclude = [
    # Exclude non-package directories
    "weights/",
    "audio_examples/",
    "space/",
    "tests/",
    "scripts/",
    # Exclude model weight files
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "weights/",
    "audio_examples/",
    "space/",
    ".venv/",
    "dist/",
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "ttsdb_hierspeech/config.yaml"
"src/ttsdb_hierspeech/_vendor/source" = "ttsdb_hierspeech/_vendor/source"
