[project]
name = "ttsdb_maskgct"
version = "0.1.0"
description = "MaskGCT model for TTSDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ttsdb-core>=0.1.0",
    # PyTorch ecosystem
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # Model loading
    "safetensors",
    "accelerate>=0.24.1",
    "huggingface-hub",
    # Audio processing
    "soundfile",
    "librosa>=0.10.0",
    # Text / NLP (for Amphion)
    "transformers>=4.41.2",
    "phonemizer>=3.2.1",
    "g2p_en>=2.1.0",
    "jieba>=0.42.1",
    "pypinyin>=0.48.0",
    # Utilities
    "json5>=0.9.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttsdb_maskgct"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "ttsdb_maskgct/config.yaml"