[project]
name = "ttsdb_maskgct"
version = "0.1.1"
description = "MaskGCT model for TTSDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ttsdb-core>=0.1.0",
    # PyTorch ecosystem
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "einops>=0.8.1",
    # Model loading
    "safetensors",
    "accelerate>=0.24.1",
    "huggingface-hub",
    # Audio processing
    "soundfile",
    "librosa>=0.10.0",
    # Text / NLP (for Amphion)
    "transformers==4.41.2",
    "phonemizer>=3.2.1",
    "g2p_en>=2.1.0",
    "jieba>=0.42.1",
    "pypinyin>=0.48.0",
    "cn2an>=0.5.0",
    "unidecode>=1.3.6",
    "langsegment-backup==0.3.5.post1",
    # Japanese support
    "pyopenjtalk>=0.3.0",
    "pykakasi>=2.2.1",
    # Audio codecs
    "encodec>=0.1.1",
    # Inference
    "onnxruntime>=1.16.0",
    # Utilities
    "json5>=0.9.11",
    "ruamel.yaml>=0.17.0,<0.18.0",
    "scipy>=1.12.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttsdb_maskgct"]
exclude = [
    # Exclude non-package directories
    "huggingface/",
    "audio_examples/",
    "space/",
    "tests/",
    "scripts/",
    # Exclude model weight files
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "huggingface/",
    "audio_examples/",
    "space/",
    ".venv/",
    "dist/",
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "ttsdb_maskgct/config.yaml"