# Generated at 2026-02-03T00:00:00Z from templates/init/pyproject.toml.j2

[project]
name = "ttsdb_openvoice"
version = "0.1.0"
description = "OpenVoice model for TTSDB"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ttsdb-core>=0.1.4",
    "torch>=1.13.1",
    "torchaudio>=0.13.1",
    "numpy>=1.22.0",
    "soundfile>=0.10.0",
    "librosa==0.9.1",
    "pydub==0.25.1",
    "nltk==3.6.2",
    "whisper-timestamped==1.14.2",
    "wavmark==0.0.3",
    "eng_to_ipa==0.0.2",
    "inflect==7.0.0",
    "unidecode==1.3.7",
    "openai",
    "python-dotenv",
    "pypinyin==0.50.0",
    "cn2an==0.5.22",
    "jieba==0.42.1",
    "langid==1.1.6",
    "melotts @ git+https://github.com/myshell-ai/MeloTTS.git@5b538481e24e0d578955be32a95d88fcbde26dc8",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ttsdb_openvoice"]
include = [
    # Include vendored upstream research code in wheels
    "src/ttsdb_openvoice/_vendor/**",
]
exclude = [
    # Exclude non-package directories
    "weights/",
    "audio_examples/",
    "space/",
    "tests/",
    "scripts/",
    # Exclude model weight files
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "weights/",
    "audio_examples/",
    "space/",
    ".venv/",
    "dist/",
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "ttsdb_openvoice/config.yaml"
"src/ttsdb_openvoice/_vendor/source" = "ttsdb_openvoice/_vendor/source"
