# Generated at 2026-02-02T09:52:12Z from templates/init/pyproject.toml.j2

[project]
name = "ttsdb_pheme"
version = "0.1.0"
description = "Pheme model for TTSDB"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ttsdb-core>=0.1.4",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.21.0",
    "soundfile>=0.10.0",
    "librosa>=0.10.0",
    "einops>=0.7.0",
    "transformers>=4.20.0",
    "pyannote-audio>=3.1.1",
    "phonemizer",
    "speechtokenizer",
    "beartype",
    "tensorboard",
    "omegaconf",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttsdb_pheme"]
include = [
    # Include vendored upstream research code in wheels
    "src/ttsdb_pheme/_vendor/**",
]
exclude = [
    # Exclude non-package directories
    "weights/",
    "audio_examples/",
    "space/",
    "tests/",
    "scripts/",
    # Exclude model weight files
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "weights/",
    "audio_examples/",
    "space/",
    ".venv/",
    "dist/",
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "ttsdb_pheme/config.yaml"
"src/ttsdb_pheme/_vendor/source" = "ttsdb_pheme/_vendor/source"
