# Generated at 2026-02-03T00:00:00Z from templates/init/pyproject.toml.j2

[project]
name = "ttsdb_vibevoice"
version = "0.1.0"
description = "VibeVoice model for TTSDB"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ttsdb-core>=0.1.4",
    "torch>=2.0.0",
    "transformers>=4.51.3,<5.0.0",
    "diffusers>=0.27.0",
    "tqdm>=4.66.0",
    "numpy>=1.22.0",
    "soundfile>=0.12.0",
    "scipy>=1.8.0",
    "huggingface_hub>=0.25.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ttsdb_vibevoice"]
include = [
    # Include vendored upstream research code in wheels
    "src/ttsdb_vibevoice/_vendor/**",
]
exclude = [
    # Exclude non-package directories
    "weights/",
    "audio_examples/",
    "space/",
    "tests/",
    "scripts/",
    # Exclude model weight files
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "weights/",
    "audio_examples/",
    "space/",
    ".venv/",
    "dist/",
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "ttsdb_vibevoice/config.yaml"
"src/ttsdb_vibevoice/_vendor/source" = "ttsdb_vibevoice/_vendor/source"
