# Generated at 2026-02-02T09:52:12Z from templates/init/pyproject.toml.j2

[project]
name = "ttsdb_voicecraft"
version = "0.1.0"
description = "VoiceCraft model for TTSDB"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ttsdb-core>=0.1.4",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.21.0",
    "soundfile>=0.10.0",
    "num2words==0.5.13",
    "phonemizer==3.2.1",
    "nltk>=3.8.1",
    "openai-whisper>=20231117",
    "whisperx==3.1.1",
    "huggingface-hub==0.22.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
align = ["aeneas==1.7.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ttsdb_voicecraft"]
include = [
    # Include vendored upstream research code in wheels
    "src/ttsdb_voicecraft/_vendor/**",
]
exclude = [
    # Exclude non-package directories
    "weights/",
    "audio_examples/",
    "space/",
    "tests/",
    "scripts/",
    # Exclude model weight files
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "weights/",
    "audio_examples/",
    "space/",
    ".venv/",
    "dist/",
    "*.safetensors",
    "*.bin",
    "*.pt",
    "*.pth",
    "*.ckpt",
    "*.h5",
    "*.onnx",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "ttsdb_voicecraft/config.yaml"
"src/ttsdb_voicecraft/_vendor/source" = "ttsdb_voicecraft/_vendor/source"
